--- a/newtab.css
+++ b/newtab.css
@@ -56,3 +56,31 @@ input:focus {
 input:disabled {
   color: green;
 }
+
+#options_overlay {
+  position: fixed; /* Sit on top of the page content */
+  display: none; /* Hidden by default */
+  width: 100%; /* Full width (cover the whole page) */
+  height: 100%; /* Full height (cover the whole page) */
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5); /* Black background with opacity */
+  z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
+  cursor: pointer; /* Add a pointer on hover */
+  font-weight: 500;
+  color: darkgreen;
+  font-size: 27px;
+  font-family: "Courier New", Arial, Helvetica, sans-serif;
+}
+
+#pomodoro_option {
+  margin-right: 150px;
+}
+
+#underlay {
+  /*filter: blur(2px);*/
+  /*height: 100px;*/
+  /* background-color: #ccc;*/
+}
